cfn_benchmark/cfn_templates/1davidmichael__Example-CloudFormation-Templates/templates/active-directory-domain-controller-security-group/template.yaml
Description: >
  Creates a security group for the Domain Controller in AWS with required open ports
  based off ports defined here: https://docs.aws.amazon.com/directoryservice/latest/admin-guide/ms_ad_tutorial_setup_trust_prepare_mad.html

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
  NetworkCidr:
    Type: String

Resources:
  DCSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the Domain Controler
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        # DNS
        - IpProtocol: tcp
          FromPort: 53
          ToPort: 53
          CidrIp: !Ref NetworkCidr
        - IpProtocol: udp
          FromPort: 53
          ToPort: 53
          CidrIp: !Ref NetworkCidr
        # Kerberos Authentication
        - IpProtocol: tcp
          FromPort: 88
          ToPort: 88
          CidrIp: !Ref NetworkCidr
        - IpProtocol: tcp
          FromPort: 464
          ToPort: 464
          CidrIp: !Ref NetworkCidr
        - IpProtocol: udp
          FromPort: 88
          ToPort: 88
          CidrIp: !Ref NetworkCidr
        - IpProtocol: udp
          FromPort: 464
          ToPort: 464
          CidrIp: !Ref NetworkCidr
        # NTP
        - IpProtocol: udp
          FromPort: 123
          ToPort: 123
          CidrIp: !Ref NetworkCidr
        # RPC
        - IpProtocol: tcp
          FromPort: 135
          ToPort: 135
          CidrIp: !Ref NetworkCidr
        # LDAP
        - IpProtocol: tcp
          FromPort: 389
          ToPort: 389
          CidrIp: !Ref NetworkCidr
        - IpProtocol: udp
          FromPort: 389
          ToPort: 389
          CidrIp: !Ref NetworkCidr
        # LDAPS
        - IpProtocol: tcp
          FromPort: 636
          ToPort: 636
          CidrIp: !Ref NetworkCidr
        # SMB
        - IpProtocol: tcp
          FromPort: 445
          ToPort: 445
          CidrIp: !Ref NetworkCidr
        - IpProtocol: udp
          FromPort: 445
          ToPort: 445
          CidrIp: !Ref NetworkCidr
        # Global Catalog
        - IpProtocol: tcp
          FromPort: 3268
          ToPort: 3269
          CidrIp: !Ref NetworkCidr
        # Ephermal Ports
        - IpProtocol: tcp
          FromPort: 49152
          ToPort: 65535
          CidrIp: !Ref NetworkCidr
        - IpProtocol: udp
          FromPort: 49152
          ToPort: 65535
          CidrIp: !Ref NetworkCidr
